syntax = "proto3";
package cosmos.accesscontrol_x.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

import "cosmos/accesscontrol/accesscontrol.proto";
import "cosmos/accesscontrol_x/genesis.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/accesscontrol/types";

service Query {
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cosmos/cosmos-sdk/accesscontrol/params";
  }

  rpc ResourceDependencyMappingFromMessageKey(ResourceDependencyMappingFromMessageKeyRequest)
      returns (ResourceDependencyMappingFromMessageKeyResponse) {
    option (google.api.http).get =
        "/cosmos/cosmos-sdk/accesscontrol/resource_dependency_mapping_from_message_key/{message_key}";
  }

  rpc ListResourceDependencyMapping(ListResourceDependencyMappingRequest)
      returns (ListResourceDependencyMappingResponse) {
    option (google.api.http).get =
        "/cosmos/cosmos-sdk/accesscontrol/list_resource_dependency_mapping";
  }

  rpc WasmFunctionDependencyMapping(WasmFunctionDependencyMappingRequest)
    returns (WasmFunctionDependencyMappingResponse) {
  option (google.api.http).get =
      "/cosmos/cosmos-sdk/accesscontrol/wasm_function_dependency_mapping/{code_id}/{wasm_function}";
  }

  rpc ListWasmFunctionDependencyMapping(ListWasmFunctionDependencyMappingRequest)
    returns (ListWasmFunctionDependencyMappingResponse) {
  option (google.api.http).get =
      "/cosmos/cosmos-sdk/accesscontrol/list_wasm_function_dependency_mapping";
  }
}


message QueryParamsRequest {}


message QueryParamsResponse {
  // params defines the parameters of the module.
  cosmos.accesscontrol_x.v1beta1.Params params = 1 [ (gogoproto.nullable) = false ];
}

message ResourceDependencyMappingFromMessageKeyRequest {
  string message_key = 1 [ (gogoproto.moretags) = "yaml:\"message_key\"" ];
}

message ResourceDependencyMappingFromMessageKeyResponse {
    cosmos.accesscontrol.v1beta1.MessageDependencyMapping message_dependency_mapping = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"message_dependency_mapping\""
    ];
}

message WasmFunctionDependencyMappingRequest {
  uint64 code_id = 1 [ (gogoproto.moretags) = "yaml:\"code_id\"" ];
  string wasm_function = 2 [ (gogoproto.moretags) = "yaml:\"wasm_function\"" ];
}

message WasmFunctionDependencyMappingResponse {
    cosmos.accesscontrol.v1beta1.WasmFunctionDependencyMapping wasm_function_dependency_mapping = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"wasm_function_dependency_mapping\""
    ];
}


message ListResourceDependencyMappingRequest {}

message ListResourceDependencyMappingResponse {
    repeated cosmos.accesscontrol.v1beta1.MessageDependencyMapping message_dependency_mapping_list = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"message_dependency_mapping_list\""
    ];
}

message ListWasmFunctionDependencyMappingRequest {}

message ListWasmFunctionDependencyMappingResponse {
    repeated cosmos.accesscontrol.v1beta1.WasmFunctionDependencyMapping wasm_function_dependency_mapping_list = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"wasm_function_dependency_mapping_list\""
    ];
}
